--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="container my-4">
-        <table class="table table-bordered" id="tableData">
+        <table class="table table-striped table-hover" id="tableData">
             <thead>
               <tr>
                 <th scope="col">Row Id</th>
